# public-coder

./: .gitignore  README.md
docker/: .env.example  Dockerfile  bridge.py  build_macos9.sh  compose.yml  docker-compose.retro68.yml  scaffold_macos9_project.py  setup.sh
macos9_client/: CMakeLists.txt  how_icons_fixed.md  retrocarbon.toolchain.cmake  retroppc.toolchain.cmake
macos9_client/icons/: Archive.sit  NotePad.tiff  app-icon.tiff  extract_icons.py  gen_icons.py
macos9_client/icons/new-icons/: app-icon.pct
macos9_client/new-icons/: Archive.sit
macos9_client/new-icons/templates/: mode_icon_template.r  mode_icon_template_datafork.rsrc
macos9_client/rsrc/: MacApp.r  icons.r  mode_icons.r
macos9_client/src/: ai_context.c  ai_diff.c  ai_executor.c  ai_history.c  common.h  dialogs.c  editor.c  file_ops.c  json_mini.c  json_mini.h  main.c  network.c  network.h  ui_actions.c  ui_draw.c  ui_events.c  ui_menu.c  ui_utils.c  utils.c
